--- a/index.html
+++ b/index.html
@@ -695,6 +695,14 @@
             cursor: pointer;
 
         }
+        .amp-accordion__header {
+        border: none;
+        background-color: white;
+        border-radius: 10px;
+        padding: 0px 10px;box-shadow: 0px 20px 40px 0px #EEF0F2;
+
+      }
+  
   
     </style>
 
@@ -1879,7 +1887,7 @@
 
                 <amp-accordion id="my-accordion" >
                     <section>
-                        <h2>
+                        <h2  class="amp-accordion__header">
                             <div class="flex" style="justify-content: space-between; padding: 6px;">
                                 <h4 class=" f-s-14 f-w-500 f-s-1 gray-txt">What is Type 2 diabetes? </h4>
                                 <span>
@@ -1899,7 +1907,7 @@
                         </p>
                     </section>
                     <section>
-                        <h2>
+                        <h2  class="amp-accordion__header">
                             <div class="flex" style="justify-content: space-between; padding: 6px;">
                                 <h4 class=" f-s-14 f-w-500 f-s-1 gray-txt">Can diabetes be managed with medicines alone?
                                 </h4>
@@ -1916,7 +1924,7 @@
                             reversal.</p>
                     </section>
                     <section>
-                        <h2>
+                        <h2  class="amp-accordion__header">
                             <div class="flex" style="justify-content: space-between; padding: 6px;">
                                 <h4 class=" f-s-14 f-w-500 f-s-1 gray-txt">What does OneCare offer?</h4>
                                 <span>
@@ -1932,7 +1940,7 @@
                             for your diabetes care.</p>
                     </section>
                     <section>
-                        <h2>
+                        <h2  class="amp-accordion__header">
                             <div class="flex" style="justify-content: space-between;  padding: 6px;">
                                 <h4 class=" f-s-14 f-w-500 f-s-1 gray-txt"> What is the OneCare IMPACT program?</h4>
                                 <span>
@@ -1955,7 +1963,7 @@
                         </div>
                     </section>
                     <section>
-                        <h2>
+                        <h2  class="amp-accordion__header">
                             <div class="flex" style="justify-content: space-between;  padding: 6px;">
                                 <h4 class=" f-s-14 f-w-500 f-s-1 gray-txt">What are the benefits of the program?</h4>
                                 <span>
@@ -1993,8 +2001,8 @@
 
 
 
-                    <section>
-                        <h2>
+                    <section  >
+                        <h2  class="amp-accordion__header">
                             <div class="flex" style="justify-content: space-between;  padding: 6px;">
                                 <h4 class=" f-s-14 f-w-500 f-s-1 gray-txt">What are the benefits of the program?</h4>
                                 <span>
