--- a/web.html
+++ b/web.html
@@ -15,31 +15,37 @@
 
 
 
- <style>
-.bg-pink-shd
-{
-    background: linear-gradient(180deg, #FFAFC6 -4.33%, #FFEFD4 109.25%),
-linear-gradient(177.97deg, #A3E5FF 1.72%, #FFF1F1 98.52%);
+    <style>
+        .bg-drk-blu {
+            background: #14566A;
 
-}
-.bg-blue-shd{
-    background: linear-gradient(177.97deg, #A3E5FF 1.72%, #FFF1F1 98.52%);
+        }
 
-}
-.pink-txt{
-   color: #F1647B;
+        .bg-pink-shd {
+            background: linear-gradient(180deg, #FFAFC6 -4.33%, #FFEFD4 109.25%),
+                linear-gradient(177.97deg, #A3E5FF 1.72%, #FFF1F1 98.52%);
 
-}
-.blue-txt{
-   color: #4E84C1;
-}
-.orange-txt{
-    color: #F07162;
+        }
 
-}
+        .bg-blue-shd {
+            background: linear-gradient(177.97deg, #A3E5FF 1.72%, #FFF1F1 98.52%);
 
+        }
 
- </style>   
+        .pink-txt {
+            color: #F1647B;
+
+        }
+
+        .blue-txt {
+            color: #4E84C1;
+        }
+
+        .orange-txt {
+            color: #F07162;
+
+        }
+    </style>
 </head>
 
 <body>
@@ -115,33 +121,226 @@ linear-gradient(177.97deg, #A3E5FF 1.72%, #FFF1F1 98.52%);
             </div>
 
         </section>
-        <section>
+        <section class="py-20 bg-drk-blu">
 
 
 
 
-            <div class="container flex justify-center p-10">
+            <div class="container flex flex-row  justify-center  mx-auto">
 
 
 
-                <div class="container flex  flex-col items-center text-center">
+                <div class="container flex  flex-col items-center text-center max-w-xs">
                     <img src="./assest/Trust.webp" alt="">
-                    <p class=" my-5" > Personalised Diabetes Care <br/>program designed 'Just for<br/> you'</p>
+                    <p class=" my-5 text-white"> Personalised Diabetes Care <br />program designed 'Just for<br /> you'
+                    </p>
                 </div>
                 <div class="container flex flex-col items-center text-center">
                     <img src="./assest/People.webp" alt="">
-                    <p class=" my-5">A panel of expert<br/> for all your needs</p>
+                    <p class=" my-5 text-white">A panel of expert<br /> for all your needs</p>
                 </div>
-                <div class="container flex flex-col items-center text-center"> <img src="./assest/Medical_Mobile_App.webp" alt="">
-                    <p class=" my-5">State-of-the-art Health Tracking<br/> App customised for you</p>
+                <div class="container flex flex-col items-center text-center"> <img
+                        src="./assest/Medical_Mobile_App.webp" alt="">
+                    <p class=" my-5 text-white">State-of-the-art Health Tracking<br /> App customised for you</p>
                 </div>
-                <div class="container flex flex-col items-center text-center"> <img src="./assest/Medical_Doctor.webp" alt="">
-                    <p class=" my-5">Dedicated Health Coach for <br/> day to day guidance</p>
+                <div class="container flex flex-col items-center text-center"> <img src="./assest/Medical_Doctor.webp"
+                        alt="">
+                    <p class=" my-5 text-white">Dedicated Health Coach for <br /> day to day guidance</p>
                 </div>
 
             </div>
         </section>
-        <section></section>
+        <section id="manage" class="py-10 ">
+            <h2 class=" text-center font-bold text-3xl my-5">Manage your diabetes in 3 easy steps</h2>
+
+
+
+
+
+            <div class="container flex justify-center flex-row py-10 mx-auto">
+
+
+
+
+
+                <div class="container flex flex-col item-center p-10 mx-10 bg-blue-shd">
+                    <img src="./assest/manage1.svg" alt="">
+
+                    <h4 class="text-center blue-txt">Step 1</h4>
+                    <p class="text-center">Meet your team of expert diabetologists, health counsellors, dieticians at
+                        OneCare Smart Clinics
+                        & get expert diagnosis & insights on your diabetes management.</p>
+                </div>
+
+                <div class="container flex flex-col item-center  p-10 mx-10 bg-pink-shd">
+                    <img src="./assest/manage2.svg" alt="">
+
+                    <h4 class="text-center blue-txt">Step 2</h4>
+                    <p class="text-center">Get started on a personalised diabetes management journey designed around
+                        your needs to help you realise 10x better outcomes.</p>
+                </div>
+                <div class="container flex flex-col item-center  p-10 mx-10 bg-blue-shd">
+                    <img src="./assest/manage3.svg" alt="">
+
+                    <h4 class="blue-txt text-center">Step 3</h4>
+                    <p class="text-center">Our panel of dedicated Health Coach will be with you every step of the way
+                        guiding you towards a better life beyond diabetes </p>
+                </div>
+            </div>
+
+
+
+
+
+
+        </section>
+
+
+
+
+
+
+        <section id=" Diabetologists" class="py-20 bg-blue-shd">
+            <h2 class="text-center font-bold text-3xl my-5">Consult with our Expert team of <br />
+                Endocrinologists & Diabetologists <span class="orange-txt">in Bangalore</span> </h2>
+            <div class="container mx-auto flex items-center ">
+
+
+
+
+                <div class=" container items-center flex m-10 border-2 border-white rounded-3xl">
+                    <div>
+                        <img src="./assest/doc1.svg" alt="">
+                    </div>
+
+                    <div class="flex flex-col ml-5">
+                        <h3> Dr. Basavaraj GS </h3>
+                        <h4>MBBS, MD, DM (Endocrinology)</h4>
+                        <p class="my-2 pink-txt">13+ years of experience <br />Associated with Narayana Hrudayalaya</p>
+                        <div class="flex items-center"><img src="./assest/Thumbs Up.webp" alt="">
+                            <p class="ml-3">98% Approval on Practo</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="container flex items-center m-10 border-2 border-white rounded-3xl">
+                    <div>
+                        <img src="./assest/doc2.svg" alt="">
+                    </div>
+
+                    <div class="ml-5 ">
+                        <h3>Dr. C Siva Rama Krishna </h3>
+                        <h4>MD, M.H. Sc. (Diabetology)</h4>
+                        <p class="pink-txt my-2"> 10+ years of experience </p>
+                        <div class="flex items-center"><img src="./assest/Thumbs Up.webp" alt="">
+                            <p class="ml-3"> 92% Approval on Practo</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container flex m-10 items-center border-2 border-white rounded-3xl ">
+                    <div>
+                        <img src="./assest/doc3.svg" alt="">
+                    </div>
+
+                    <div class="ml-5">
+                        <h3>Dr. Lavanya</h3>
+                        <h4> MBBS (Diabetology)</h4>
+                        <p class="pink-txt my-2"> 17+ years of experience <br />Associated with Apollo Hospitals</p>
+                        <div class="flex items-center"><img src="./assest/Thumbs Up.webp" alt="">
+                            <p class="ml-3">98% Approval on Practo</p>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+            </div>
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+        <section id="visit" class="py-20 ">
+
+<h2 class="blue-txt font-bold text-3xl my-5">Visit OneCare at</h2>
+
+
+
+<div class="container  mx-auto flex ">
+
+
+<div>
+
+
+
+
+    <div>
+        <div><h3>3 Locations</h3></div>
+    </div>
+<div>
+<div>
+
+    <h3></h3>
+</div>
+
+
+
+
+
+    <div>
+        <img src="./assest/" alt="">
+    </div>
+</div>
+
+
+
+
+</div>
+
+
+
+
+
+<div id="map-wrapper">
+
+    <img src="./assest/map2.svg" alt="">
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+        </section>
+
     </main>
     <footer></footer>
 </body>
